# rcta_manipulation

./: .gitignore  README.txt  frames.gv
scripts/: screenrc_sim_fake
src/gundam_description/: CMakeLists.txt  package.xml
src/gundam_description/urdf/: gundam.urdf.xacro  talon.urdf.xacro
src/gundam_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/gundam_moveit_config/config/: fake_controllers.yaml  gundam_pr2_roman.srdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  sbpl_planning.yaml
src/gundam_moveit_config/launch/: combined_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sbpl_planning_pipeline.launch.xml  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/narms/: CMakeLists.txt  package.xml  readme.txt
src/narms/config/: grasping_poses.yaml  planning_problem.yaml  planning_problem_2.yaml  planning_problem_3.yaml  planning_problem_reversed.yaml  planning_problem_rrtconnect.yaml  planning_problem_rrtstar.yaml
src/narms/include/: narms_utils.h  state_machine.h  states.h
src/narms/launch/: gundam_arm_servers.launch
src/narms/src/: gripper_server.cpp  move_arm_server.cpp  move_pr2_server.cpp  object_node.cp  object_node.cpp  planning_scene_manager.cpp  pr2_move_arm_server.cpp  sampling_planner.cpp  state_machine.cpp
src/narms/src/test/: ik_test.cpp  move_arm_server_test.cpp  planning_test.cpp  pr2_full_test.cpp  pr2_planning_test.cpp  roman_planning_test.cpp  simple_navigation_goals.cpp  smach_count_test.cpp
src/narms/srv/: gripper_command.srv  target_pose.srv
src/narms/utils/: narms_utils.cpp  states.cpp
src/pr2_description/meshes/gripper_v0/: finger_tip_l.stl
src/pr2_description/robots/: pr2_namespaced.urdf.xacro
src/pr2_description/urdf/base_v0/: base.urdf.xacro
src/pr2_description/urdf/forearm_v0/: forearm.urdf.xacro
src/pr2_description/urdf/gripper_v0/: gripper.urdf.xacro
src/pr2_description/urdf/head_v0/: head.urdf.xacro
src/pr2_description/urdf/shoulder_v0/: shoulder.urdf.xacro
src/pr2_description/urdf/torso_v0/: torso.urdf.xacro
src/pr2_description/urdf/upper_arm_v0/: upper_arm.urdf.xacro
src/rcta/config/robots/roman/moveit/: rcta_roman.srdf
src/rcta/launch/control/: roman_control.launch  roman_control_ns.launch
src/rcta/launch/localization/: roman_pose.launch  roman_pose_ns.launch
src/rcta/launch/multirobot/: bringup_pr2_custom.launch  pr2_move_group.launch  pr2_namespaced.srdf  pr2_planning_context.launch
src/rcta/launch/planning/: move_arm_node.launch  move_arm_node_ns.launch
src/roman_model/urdf/: robosimian_arm_joint_limited.urdf.xacro  roman_body.urdf.xacro  talon.urdf.xacro
